<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ShowMarksActivity">



    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bgRightNav"
        app:cardElevation="3dp"
        app:cardCornerRadius="10dp"


        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorMoreDark"
                android:text="@string/result"

                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/question_attempted"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/question_attempted"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_45"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/correct_answers"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/correct_answer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_45"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/incorrect_answers"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/incorrect_answer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_45"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/total_marks_obtain"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/marks_obtained"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_45"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        android:layout_margin="2dp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/paper_total_marks"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp">

                    <TextView
                        android:id="@+id/total_marks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/_45"
                        android:textAlignment="center"
                        android:layout_margin="2dp"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



<!--        <TextView-->
<!--            android:id="@+id/marksObtained"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.234" />-->

<!--        <TextView-->
<!--            android:id="@+id/totalMarks"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="TextView"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/marksObtained"-->
<!--            app:layout_constraintVertical_bias="0.218" />-->



        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/review_btn"
            android:padding="4dp"
            android:text="@string/review_paper"
            android:background="@drawable/mybutton"
            android:textAlignment="center"
            android:layout_marginTop="30dp"/>






</LinearLayout>