<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

<!--        <com.studyquiz.myapplicationnav.CustomViewPager-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_marginTop="?attr/actionBarSize"-->
<!--            android:id="@+id/pager">-->




<!--        </com.studyquiz.myapplicationnav.CustomViewPager>-->

        <com.testyo.org.CustomViewPager
            android:id="@+id/customViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="@color/bgRightNav"
        android:fitsSystemWindows="true"

        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circle"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/answered" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circlered"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/unattempted" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circlenotvisited"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/not_visited" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/circlemarkforreview"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/mark_for_review" />

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/timeCatagory"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="0dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circle"

                            />

                        <TextView
                            android:id="@+id/qAttempted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/rightNavFnt"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circlered"

                            />

                        <TextView
                            android:id="@+id/qUnattempted"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/rightNavFnt"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circlenotvisited"

                            />

                        <TextView
                            android:id="@+id/qNotVisited"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/rightNavFnt"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/circlemarkforreview"

                            />

                        <TextView
                            android:id="@+id/qMarkForReview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/_0"
                            android:textColor="@color/rightNavFnt"
                            android:textSize="16sp" />

                    </LinearLayout>


                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="290dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:foregroundGravity="center_horizontal"
                    app:cardBackgroundColor="@color/timeCatagory"
                    app:cardCornerRadius="35dp"
                    app:cardElevation="1.5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/nav_recycle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="15dp">


                        </androidx.recyclerview.widget.RecyclerView>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/mygreenbtn"
                    android:foregroundGravity="bottom"
                    android:text="@string/submit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
